# challenges-2025

./: README.md
crypto/babyrng/: challenge.yaml
crypto/babyrng/challenge-solution/: solution.md  solve.py
crypto/curved-mvm/: challenge-handout  challenge.yaml
crypto/curved-mvm/challenge-solution/: server.py  solve.sage
crypto/fastcrypto/: challenge.yaml
crypto/man_vs_matrix/: challenge.yaml
crypto/much-vulnerable-machine-1/: challenge.yaml
crypto/much-vulnerable-machine-2/: challenge.yaml
crypto/much-vulnerable-machine-3/: challenge.yaml
crypto/rubiks-dsa/: challenge.yaml
crypto/sourceless-crypto/: challenge.yaml
misc/count-the-mvms/: challenge.yaml
misc/foundations/: challenge.yaml
misc/hydraulic-press/: challenge.yaml
misc/mvm/: challenge.yaml
misc/omnibius/: challenge.yaml
misc/p11n-trophy/: challenge.yaml
misc/redacted/: challenge.yaml
misc/secure-snek/: challenge.yaml
misc/trophy-plus/: challenge.yaml
misc/trophy-plus64/: challenge.yaml
pwn/devnull-as-a-service/: challenge.yaml
pwn/pwny-heap/: challenge.yaml
pwn/secure-sandbox/: challenge.yaml
rev/keystore-rs/: challenge.yaml
rev/keystore-rs/challenge-src/: Cargo.toml
rev/keystore-rs/challenge-src/src/: main.rs
rev/netmsg-1/: challenge.yaml
rev/netmsg-2/: challenge.yaml
rev/notcrypto/: challenge.yaml
rev/oh_my_gadt/: challenge-src  challenge.yaml
rev/pickle-season/: challenge.yaml
web/MVMCheckers-Inc/: challenge.yaml
web/StoryCreator/: challenge.yaml
web/blogdog/: challenge.yaml
web/kittyconvert/: challenge.yaml
web/submission/: challenge.yaml
(+104 files in other folders)
